--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "build": "rollup --config",
     "prebuild": "npm run clean",
     "clean": "rimraf coverage dist",
-    "docs": "documentation build src -f html --github -o docs",
+    "docs": "npm run docs:readme && npm run docs:html",
+    "docs:readme": "node build-readme.js",
+    "docs:html": "documentation build src -f html --github -o docs",
     "precommit": "npm test:lint && npm test",
     "preversion": "npm test",
     "version": "npm run build && git add -A dist",
